--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "helmet": "^7.2.0",
     "lucide-react": "^0.534.0",
     "morgan": "^1.10.1",
+    "node-cron": "^4.2.1",
     "path": "^0.12.7",
+    "pg": "^8.16.3",
     "puppeteer": "^24.16.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
